# backend-rust/src/schema/mod.rs
@@ -1,5 +1,4 @@
 pub use openapi_types::models::{
-    _api_v2_streams_get_200_response::ApiV2StreamsGet200Response,
-    _api_v2_streams_post_request::ApiV2StreamsPostRequest as CreateStreamRequest,
-    Stream as StreamResponse, StreamSummary as StreamSummaryResponse, ValidationError, ServerError,
+    CreateStreamRequest, Stream as StreamResponse, StreamListResponse,
+    StreamSummary as StreamSummaryResponse, ValidationError, ServerError,
 };
